# TinyEventLib

./: CMakeLists.txt  LICENSE  README.md
cmake/: coverage.cmake
examples/: CMakeLists.txt
examples/signal-handler/: CMakeLists.txt  signal-handler.cpp
examples/simple/: CMakeLists.txt  simple.cpp
src/: CMakeLists.txt  QAbstractEventDispatcher.hpp  QEvent.hpp  QEventDispatcher.cpp  QEventDispatcher.hpp  QEventDispatcherUNIX.hpp  QEventLoop.cpp  QEventLoop.hpp  QObject.cpp  QObject.hpp  QSignal.hpp  QSocketNotifier.hpp  QTimer.cpp  QTimer.hpp  Signal.hpp  function_ref.hpp
src/core/: CMakeLists.txt  QAbstractEventDispatcher.cpp  QAbstractEventDispatcher.hpp  QCoreApplication.cpp  QCoreApplication.hpp  QEvent.hpp  QEventDispatcherUNIX.cpp  QEventDispatcherUNIX.hpp  QEventLoop.cpp  QEventLoop.hpp  QObject.cpp  QObject.hpp  QPosixSignal.cpp  QPosixSignal.hpp  QProperty.hpp  QSignal.hpp  QSocketNotifier.cpp  QSocketNotifier.hpp  QTimer.cpp  QTimer.hpp  callable_ref.hpp  function_ref.hpp  method_ref.hpp
src/io/: CMakeLists.txt  QIODevice.cpp  QIODevice.hpp  QIODeviceBase.hpp
tests/: CMakeLists.txt
tests/core/: CMakeLists.txt  test_QCoreApplication.cpp  test_QEvent.cpp  test_QObject.cpp  test_QPosixSignal.cpp  test_QSignal.cpp  test_QSocketNotifier.cpp  test_QTimer.cpp  test_callable_ref.cpp  test_function_ref.cpp  test_method_ref.cpp
tests/io/: CMakeLists.txt  test_QIODevice.cpp
